<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poras.passionate.momskitchen.ui.StepsActivity">

    <FrameLayout
        android:id="@+id/step_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/nxtLayout"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_large">

        <Button
            android:id="@+id/btn_prev"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:fontFamily="@font/merriweather_sans_bold"
            android:text="@string/previous_step" />

        <Button
            android:id="@+id/btn_next"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:fontFamily="@font/merriweather_sans_bold"
            android:text="@string/next_step"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</FrameLayout>
